			   XPCE ChangeLog
			   ==============

* FIXED: Bug#27 icon directory prolog/lib/doc/icons was not installed.
  Lourens van der Meij.

* FIXED: PceEmacs: do not signal ->idle when a gesture is in progress
  (avoids re-colouring while waiting for the user to select a popup-entry).

* FIXED: library(pce_style_item). Ferreira Maurizio.

* ADDED: <->gap to graphical_browser (library(pce_graphical_browser)).

* FIXED: Placing of window objects in tables (class table).

* FIXED: PceEmacs OWL-mode: open_document namespace declarations.

* ADDED: PceEmacs colourise "Comment":: in method-body.

VERSION 6.1.8, distributed with SWI-Prolog 5.1.8
================================================

* ADDED: library(pce_identifier_item) providing the class identifier_item.

* FIXED: tool_bar->activate if there are `gaps' in the toolbar

* ADDED: PceEmacs cross-references now deals with the :- meta_predicate
  declaration.


VERSION 6.1.7, distributed with SWI-Prolog 5.1.7
================================================

* ENHANCED: indirection in class editable_text to make it easier to modify
  edit-mode feedback in subclasses.

* FIXED: Bug #14: printer handling for PceDraw (Lourens van der Meij).

* FIXED: Object-reference counting problem that may cause colour objects
  to be garbage collected early.  (Lourens van der Meij).

* ADDED: PceEmacs: provisional RDF, RDFS and OWL modes to insert the lengthy
  header and draw a triple diagram from small files.

* PceEmacs: added .owl to map to xml-mode

VERSION 6.1.6, distributed with SWI-Prolog 5.1.6
================================================

* FIXED: `toc_node->font' from the library(pce_toc).  Filip Prochazka

* FIXED: Balloon help in modal windows.  After demo program from Juergen Repp.

* FIXED: Guitracer: goal-expansion loop.

* ENHANCED: image->draw_in to avoid redrawing the whole graphical if only
  part overlaps the image.
	
* ADDED: Support for writing PostScript colour images.
